--- a/app/views/rating_types/show.html.erb
+++ b/app/views/rating_types/show.html.erb
@@ -2,3 +2,8 @@
   <label>Value: </label>
   <%= @rating_type.value %>
 </p>
+
+<p>
+  <label>Priority: </label>
+  <%= @rating_type.priority %>
+</p>
