--- a/app/views/rate_ratings/_languages.html.erb
+++ b/app/views/rate_ratings/_languages.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Value</th>
+      <th>Priority</th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @languages.each do |language| %>
       <tr>
         <td><%= language.value %></td>
+        <td><%= language.priority %></td>
         <td><%= link_to "Show", language %></td>
         <td><%= link_to "Edit", edit_language_path(language) %></td>
         <td><%= link_to "Destroy", language, method: :delete, data: { confirm: "Are you sure?" } %></td>
