--- a/app/views/rating_types/index.html.erb
+++ b/app/views/rating_types/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Value</th>
+      <th>Priority</th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @rating_types.each do |rating_type| %>
       <tr>
         <td><%= rating_type.value %></td>
+        <td><%= rating_type.priority %></td>
         <td><%= link_to "Show", rating_type %></td>
         <td><%= link_to "Edit", edit_rating_type_path(rating_type) %></td>
         <td><%= link_to "Destroy", rating_type, method: :delete, data: { confirm: "Are you sure?" } %></td>
