--- a/app/views/rating_types/new.html.erb
+++ b/app/views/rating_types/new.html.erb
@@ -5,6 +5,11 @@
   </p>
 
   <p>
+    <%= f.label :priority %>
+    <%= f.number_field :priority, value: @rating_type.priority %>
+  </p>
+
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
