--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -18,10 +18,38 @@
         <p>
           <% rating = CaRating.find_by(type_id: rt.id, issue_id: @issue.id) %>
           <label><%= rt.value %></label>
-          <%= range_field_tag "issue[rating_#{rt.value}]", value = rating.try(:value), in: 1..10, step: 1, :oninput=> "rating_#{rt.value}.value = issue_rating_#{rt.value}.value" %>
+          <%= range_field_tag "issue[rating_#{rt.value}]", value = rating ? rating.try(:value) : 0, in: 0..10, step: 1, :oninput=> "rating_#{rt.value}.value = issue_rating_#{rt.value}.value", class: 'rating' %>
           <%= content_tag( :output, "#{rating.try(:value)}", :id=>"rating_#{rt.value}") %>
         </p>
       <% end %>
     </div>
   <% end %>
+<% end %>
+
+<%= javascript_tag do %>
+
+  $(".rating").on('click', function(event){
+    var arr = []
+    $(".rating").each(function() {
+      arr.push($(this).val())
+    });
+
+    if (!arr.includes('0')) {
+      $('input[name ="commit"]').prop("disabled", false);
+      $("#rating_error").hide();
+    } else {
+      $('input[name ="commit"]').prop("disabled", true);
+      $("#rating_error").show();
+    }
+  });
+
+  $(document).ready(function() {
+    <% if User.current.admin? || Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
+      <% if  @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
+        <% if @rating_types.any? %>
+          $('input[name ="commit"]').prop( "disabled", true );
+        <% end %>
+      <% end %>
+    <% end %>
+  });
 <% end %>
