resolve bug with large checkboxes

--- a/app/views/rate_ratings/_user_rate.html.erb
+++ b/app/views/rate_ratings/_user_rate.html.erb
@@ -232,7 +232,33 @@ function duplicateRate() {
 <% end %>
 
 <style>
-  .tabular input, .tabular select {
-      width: 90%;
-  }
+
+   .unitTypeId {
+     width: 90%;
+   }
+
+   #rate_unit_qty {
+     width: 90%;
+   }
+
+   .currencyId {
+     width: 90%;
+   }
+
+   #rate_value {
+     width: 90%;
+   }
+
+   .languageId {
+     width: 90%;
+   }
+
+   .trackerId {
+     width: 90%;
+   }
+
+   #rate_id {
+     width: 90%;
+   }
+
 </style>
