make language required for any statuses

--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -35,31 +35,63 @@
 
     var language = $("select#issue_language_id").val();
 
-    if (!arr.includes('0') && language !== '') {
-      $('input[name ="commit"]').prop("disabled", false);
-      $("#rating_error").hide();
-    } else {
-      $('input[name ="commit"]').prop("disabled", true);
-      $("#rating_error").show();
-    }
 
-    if (!arr.includes('0')) {
-      $("#rating_error").hide();
-    } else {
-      $("#rating_error").show();
-    }
+    <% if User.current.admin? || Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
+      <% if  @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
+        <% if @rating_types.any? %>
+          if (!arr.includes('0') && language !== '') {
+            $('input[name ="commit"]').prop("disabled", false);
+            $("#rating_error").hide();
+          } else {
+            $('input[name ="commit"]').prop("disabled", true);
+            $("#rating_error").show();
+          }
+        <% else %>
+        if (language !== '') {
+          $('input[name ="commit"]').prop("disabled", false);
+          $("#rating_error").hide();
+        } else {
+          $('input[name ="commit"]').prop("disabled", true);
+          $("#rating_error").show();
+        }
+        <% end %>
+      <% else %>
+        if (language !== '') {
+          $('input[name ="commit"]').prop("disabled", false);
+          $("#rating_error").hide();
+        } else {
+          $('input[name ="commit"]').prop("disabled", true);
+          $("#rating_error").show();
+        }
+      <% end %>
+    <% else %>
+      if (language !== '') {
+        $('input[name ="commit"]').prop("disabled", false);
+        $("#rating_error").hide();
+      } else {
+        $('input[name ="commit"]').prop("disabled", true);
+        $("#rating_error").show();
+      }
+    <% end %>
+
 
     if (language !== '') {
       $("#language_error").hide();
     } else {
       $("#language_error").show();
     }
-  });
 
-
-
-  $( "#issue_language_id" ).select(function() {
-    var language = $("select#issue_language_id").val();
+    <% if User.current.admin? || Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
+      <% if  @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
+        <% if @rating_types.any? %>
+          if (!arr.includes('0')) {
+            $("#rating_error").hide();
+          } else {
+            $("#rating_error").show();
+          }
+        <% end %>
+      <% end %>
+    <% end %>
   });
 
   $(".rating").on('click', function(event){
@@ -90,12 +122,21 @@
   });
 
   $(document).ready(function() {
+    $('input[name ="commit"]').prop("disabled", true);
+
     <% if User.current.admin? || Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
       <% if  @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
         <% if @rating_types.any? %>
-          $('input[name ="commit"]').prop("disabled", true);
+          $("#rating_error").show();
+
+        <% else %>
+          $("#rating_error").hide();
         <% end %>
+      <% else %>
+        $("#rating_error").hide();
       <% end %>
+    <% else %>
+      $("#rating_error").hide();
     <% end %>
   });
 <% end %>
