--- a/app/views/issues/_ratings_form.html.erb
+++ b/app/views/issues/_ratings_form.html.erb
@@ -26,6 +26,7 @@
   <% end %>
 <% end %>
 
+
 <%= javascript_tag do %>
   $("#issue_language_id").change(function() {
     var arr = []
@@ -122,7 +123,11 @@
   });
 
   $(document).ready(function() {
-    $('input[name ="commit"]').prop("disabled", true);
+
+    <% if !@issue.try(:id) %>
+      $('input[name ="commit"]').prop("disabled", true);
+    <% end %>
+
 
     <% if User.current.admin? || Setting.plugin_redmine_ratings['rating_visible'] == "1" || (User.current.roles.ids.any? && (User.current.roles.ids.to_a.map(&:to_s) & Setting.plugin_redmine_ratings['rating_role_ids'].to_a.map(&:to_s)).any? && Setting.plugin_redmine_ratings['rating_visible'] == "0") %>
       <% if  @issue.status.name == 'Closed' || @issue.status.name == 'Done' %>
